openhexa (1.0-6.1) UNRELEASED; urgency=medium

  * Non-maintainer upload.
  * gerome <qgerome@bluesquarehub.com>
  * gerome <qgerome@bluesquarehub.com>
  * stable
  * stable
  * stable
  * stable

 -- root <quentin>  Wed, 07 May 2025 12:55:43 +0000

openhexa (1.0-6) stable; urgency=medium

  [ Quentin Gérôme ]
  * bump images, use rootless images

 -- Quentin Gérôme <qgerome@bluesquarehub.com>  Wed, 7 May 2025 14:22:38 +0100

openhexa (1.0-5.1) UNRELEASED; urgency=medium

  * Non-maintainer upload.
  * build

 -- quentin gerome <qgerome@bluesquarehub.com>  Wed, 07 May 2025 12:29:06 +0000

openhexa (1.0-5) stable; urgency=medium

  [ Quentin Gérôme ]
  * Create databases, users & cluster access configuration only if the cluster does not already exist

 -- Quentin Gérôme <qgerome@bluesquarehub.com>  Fri, 18 Apr 2025 12:14:38 +0100

openhexa (1.0-4) stable; urgency=medium

  * Add SSL configuration for the SMTP server

 -- Quentin Gérôme <qgerome@bluesquarehub.com>  Fri, 14 Feb 2025 15:14:38 +0100

openhexa (1.0-3) stable; urgency=high

  [ Christophe Philemotte ]
  * Fix CORS WSS bug when browsing notebook and running cell
    (Closes: #HEXA-1093)
  * Set version of app to 0.74.7 and notebook to 1.4.5

  [ Quentin Gérôme ]
  * Update the frontend to 0.54.4. You need to add this to your .env `MAX_REQUEST_BODY_SIZE=5gb`

 -- Quentin Gérôme <qgerome@bluesquarehub.com>  Wed, 15 Jan 2025 13:19:25 +0100

openhexa (1.0-1) stable; urgency=low

  * Initial release. (Closes: #HEXA-980)
  * Include JupyterHub
  * Depend on Debian PostgreSQL service
  * Remove minio and use local storage backend
  * Make notebook image configurable
  * Add script commands to backup and restore DB and assets

 -- Christophe Philemotte <cphilemotte@bluesquarehub.com>  Fri, 15 Nov 2024 11:12:06 +0100