@@ -7,6 +7,11 @@ openhexa (1.0-6.1) UNRELEASED; urgency=medium
   * stable
   * stable
   * stable
+  * stable
+  * gerome <qgerome@bluesquarehub.com> -rD stable
+  * stable
+  * gerome <qgerome@bluesquarehub.com> -rD stable
+  * gerome <qgerome@bluesquarehub.com> -rD stable
 
  -- root <quentin>  Wed, 07 May 2025 12:55:43 +0000
 
